@@ -1,6 +1,7 @@
 // Copyright Yahoo. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.hosted.controller.api.integration.stubs;
 
+import com.yahoo.component.AbstractComponent;
 import com.yahoo.jdisc.http.filter.security.misc.User;
 import com.yahoo.vespa.hosted.controller.api.integration.user.UserId;
 import com.yahoo.vespa.hosted.controller.api.integration.user.UserManagement;
@@ -13,13 +14,14 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 /**
  * @author jonmv
  */
-public class MockUserManagement implements UserManagement {
+public class MockUserManagement extends AbstractComponent implements UserManagement {
 
     private final Map<Role, Set<User>> memberships = new HashMap<>();
 
@@ -48,7 +50,7 @@ public class MockUserManagement implements UserManagement {
     public void addUsers(Role role, Collection<UserId> users) {
         List<User> userObjs = users.stream()
                                    .map(id -> new User(id.value(), id.value(), null, null))
-                                   .collect(Collectors.toList());
+                                   .toList();
         get(role).addAll(userObjs);
     }
 
@@ -78,11 +80,22 @@ public class MockUserManagement implements UserManagement {
 
     @Override
     public List<Role> listRoles(UserId userId) {
-        return List.of();
+        return memberships.entrySet().stream()
+                .filter(entry -> entry.getValue().stream().anyMatch(user -> user.name().equals(userId.value())))
+                .map(Map.Entry::getKey)
+                .toList();
     }
 
     @Override
     public List<Role> listRoles() {
         return new ArrayList<>(memberships.keySet());
+    }
+
+    @Override
+    public Optional<User> findUser(String email) {
+        return memberships.values().stream()
+                .flatMap(Collection::stream)
+                .filter(user -> user.email().equals(email))
+                .findFirst();
     }
 }
